--- a/source/demoproject/swish/templates/swish/component/display.html
+++ b/source/demoproject/swish/templates/swish/component/display.html
@@ -1,12 +1,6 @@
-{% comment %}
-    <!--
-        DOCUMENTATION:
 
-        WE NEED TO BE ABLE TO INCLUDE A MAIN CONTENT CLASS, AS WELL AS ID - IF THE USER
-        WANTS TO EMBED IT.
-     -->
-{% endcomment %}
 <!-- // MAIN CONTENT WRAPPER // -->
 <div class="content" {% if request.swish.content.id %}id="{{request.swish.content.id}}"{% endif %}>
     {#% component %#}
+    {{ content }}
 </div>
